--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
 </head>
 
 <body>
-  <header class="flex-container">
-    <div role="banner">
+  <header>
+    <div class="logo">
       <a href="../index.html" aria-label="Home">
-        <div class="logo">
-          <img src="../media/images/logo.png" alt="Logo" id="logo" />
-          <h1>Patricio Gallo</h1>
-        </div>
+        <img src="../media/images/logo.png" alt="Logo" id="logo" />
+        <h1>Patricio Gallo</h1>
       </a>
     </div>
     <nav>
@@ -40,9 +38,9 @@
       </a>
     </div>
 
-    <section class="portada">
+    <section class="portada" id="index">
       <article class="texto-portada">
-        <h2>Productor asesor de seguros</h2>
+        <h2>Productor Asesor de Seguros</h2>
         <p>
           Soy Patricio Roberto Gallo, Productor Asesor de Seguros matriculado
           con el número 94338 por la Superintendencia de Seguros de la Nación
@@ -56,7 +54,7 @@
         <div class="botonesPortada">
           <div>
             <a href="./pages/reunion.html">
-              <div class="botonReunion">
+              <div class="boton botongral reunion">
                 <span>Agendar reunión</span>
               </div>
             </a>
@@ -64,7 +62,7 @@
 
           <div>
             <a href="#servicios">
-              <div class="btn2">
+              <div class="boton sabermas">
                 <span>Saber más</span>
               </div>
             </a>
@@ -91,6 +89,72 @@
         <img src="./media/images/educacion.jpg" alt="">
         <img src="./media/images/seguimiento.jpg" alt="">
       </div>
+      <!-- 
+      <div class="modificada">
+        <div>
+          <article>
+            <h5>Asesoramiento Personalizado:</h5>
+            <p>Evalúa las necesidades específicas de cada cliente y ofrece asesoramiento
+              personalizado sobre el tipo y nivel de cobertura de seguros que mejor se adapta a sus circunstancias
+              individuales.</p>
+          </article>
+          <img src="./media/images/asesor.jpg" alt="">
+        </div>
+        <div>
+          <img src="./media/images/cotizar.jpg" alt="">
+          <article>
+            <h5>Cotización y Comparación:</h5>
+            <p>Proporciona cotizaciones de diferentes compañías de seguros y compara las
+              opciones disponibles en términos de costos, coberturas y beneficios.</p>
+          </article>
+        </div>
+        <div>
+          <article>
+            <h5>Venta de Pólizas:</h5>
+            <p>Facilita la compra de pólizas de seguros, explicando los términos y condiciones, así como
+              los beneficios y limitaciones de cada póliza.</p>
+          </article>
+          <img src="./media/images/venta.jpg" alt="">
+        </div>
+        <div>
+          <img src="./media/images/gestion.jpg" alt="">
+          <article>
+            <h5>Gestión de Pólizas:</h5>
+            <p>Administra y renueva las pólizas existentes, asegurándose de que estén actualizadas y
+              proporcionando asistencia en caso de cambios en las circunstancias del asegurado.</p>
+          </article>
+        </div>
+        <div>
+          <article>
+            <h5>Manejo de Siniestros:</h5>
+            <p>Asiste a los clientes en el proceso de presentación de reclamaciones y trabaja con
+              las compañías de seguros para garantizar una resolución eficiente y justa en caso de siniestros.</p>
+          </article>
+          <img src="./media/images/siniestro.jpg" alt="">
+        </div>
+        <div>
+          <img src="./media/images/educacion.jpg" alt="">
+          <article>
+            <h5>Educación del Cliente:</h5>
+            <p>Educa a los clientes sobre los diferentes tipos de seguros, términos clave y cómo
+              funcionan las pólizas. También les proporciona información sobre cómo pueden proteger mejor sus activos y
+              su
+              bienestar financiero. </p>
+          </article>
+        </div>
+        <div>
+          <article>
+            <h5>Seguimiento Continuo:</h5>
+            <p>Mantiene una relación a largo plazo con los clientes, realizando seguimientos
+              periódicos para garantizar que sus necesidades cambiantes estén cubiertas y ajustando las pólizas según
+              sea
+              necesario. </p>
+          </article>
+
+          <img src="./media/images/seguimiento.jpg" alt="">
+        </div>
+      </div>
+       -->
     </section>
 
     <section class="aprende">
@@ -134,7 +198,7 @@
     </section>
   </main>
 
-  <hr />
+  <hr>
 
   <footer>
     <section class="foot-1">
@@ -163,7 +227,7 @@
         </ul>
       </div>
     </section>
-    <hr />
+    <hr>
     <section class="foot-2">
       <div>
         N° de matrícula SSN <br />
