--- a/pages/about.html
+++ b/pages/about.html
@@ -10,12 +10,10 @@
 
 <body>
     <header>
-        <div>
-            <a href="../index.html">
-                <div class="logo">
-                    <img src="../media/images/logo.png" alt="Logo" id="logo">
-                    <h1>Patricio Gallo</h1>
-                </div>
+        <div class="logo">
+            <a href="../index.html" aria-label="Home">
+                <img src="../media/images/logo.png" alt="Logo" id="logo" />
+                <h1>Patricio Gallo</h1>
             </a>
         </div>
         <nav>
@@ -35,56 +33,64 @@
             <a href="https://wa.me/5493815906102" target="_blank"><img src="../media/images/whatsapp.png"
                     alt="Ir a Whatsapp" class="boton-wsp"></a>
         </div>
-        <div class="acercade">
-            <h4>Acerca de mí</h4>
-            <div class="grilla-zigzag">
-                <article>
-                    <h5>Tu Asesor de Confianza en Seguros</h5>
-                    <p>¡Hola! Soy Patricio Gallo, tu asesor de seguros con más de cuatro años de experiencia en el mundo
-                        asegurador. Mi misión es ofrecerte soluciones personalizadas que minimicen riesgos, cuiden y
-                        hagan
-                        crecer tu patrimonio.</p>
-                </article>
-                <article>
-                    <h5>Experiencia y Compromiso</h5>
-                    <p>He trabajado con compañías líderes como Swiss Medical, Zurich, y Copán Seguros, respaldando mi
-                        trayectoria con la matrícula 94338 de la Superintendencia de Seguros de la Nación Argentina. Mi
-                        enfoque
-                        es digital, lo que me permite ofrecerte respuestas eficientes y automatizadas.</p>
-                </article>
-                <article>
-                    <h5>Especialización</h5>
-                    <p>Ofrezco una amplia gama de seguros, desde vida hasta patrimoniales y empresariales. Cada cliente
-                        es
-                        único, y mi compromiso es comprender tus necesidades para brindarte la mejor cobertura.</p>
-                </article>
-                <article>
-                    <h5>Valores Éticos</h5>
-                    <p>Mi nombre es mi marca, y la cuido con integridad. Trabajo éticamente con mis clientes y
-                        compañías. En
-                        cada transacción, aseguro que los pagos se realicen directamente a las cuentas de la compañía,
-                        garantizando transparencia.</p>
-                </article>
-                <article>
-                    <h5>Compromiso con el Cliente</h5>
-                    <p>Me destaco por mi disponibilidad y compromiso, especialmente en situaciones difíciles como
-                        siniestros.
-                        Acompañar a mis clientes en estos momentos es fundamental, y trabajo con compañías de renombre
-                        para
-                        garantizar un servicio excepcional.</p>
-                </article>
-                <article>
-                    <h5>Formación Continua</h5>
-                    <p>Siempre estoy en busca de aprendizaje. Participo activamente en programas de capacitación
-                        continua,
-                        manteniéndome actualizado con las últimas tendencias y regulaciones en seguros.</p>
-                </article>
+        <section class="portada">
+            <div class="acercade">
+                <h4>Acerca de mí</h4>
+                <div class="grilla-zigzag">
+                    <article>
+                        <h5>Tu Asesor de Confianza en Seguros</h5>
+                        <p>¡Hola! Soy Patricio Gallo, tu asesor de seguros con más de cuatro años de experiencia en el
+                            mundo
+                            asegurador. Mi misión es ofrecerte soluciones personalizadas que minimicen riesgos, cuiden y
+                            hagan
+                            crecer tu patrimonio.</p>
+                    </article>
+                    <article>
+                        <h5>Experiencia y Compromiso</h5>
+                        <p>He trabajado con compañías líderes como Swiss Medical, Zurich, y Copán Seguros, respaldando
+                            mi
+                            trayectoria con la matrícula 94338 de la Superintendencia de Seguros de la Nación Argentina.
+                            Mi
+                            enfoque
+                            es digital, lo que me permite ofrecerte respuestas eficientes y automatizadas.</p>
+                    </article>
+                    <article>
+                        <h5>Especialización</h5>
+                        <p>Ofrezco una amplia gama de seguros, desde vida hasta patrimoniales y empresariales. Cada
+                            cliente
+                            es
+                            único, y mi compromiso es comprender tus necesidades para brindarte la mejor cobertura.</p>
+                    </article>
+                    <article>
+                        <h5>Valores Éticos</h5>
+                        <p>Mi nombre es mi marca, y la cuido con integridad. Trabajo éticamente con mis clientes y
+                            compañías. En
+                            cada transacción, aseguro que los pagos se realicen directamente a las cuentas de la
+                            compañía,
+                            garantizando transparencia.</p>
+                    </article>
+                    <article>
+                        <h5>Compromiso con el Cliente</h5>
+                        <p>Me destaco por mi disponibilidad y compromiso, especialmente en situaciones difíciles como
+                            siniestros.
+                            Acompañar a mis clientes en estos momentos es fundamental, y trabajo con compañías de
+                            renombre
+                            para
+                            garantizar un servicio excepcional.</p>
+                    </article>
+                    <article>
+                        <h5>Formación Continua</h5>
+                        <p>Siempre estoy en busca de aprendizaje. Participo activamente en programas de capacitación
+                            continua,
+                            manteniéndome actualizado con las últimas tendencias y regulaciones en seguros.</p>
+                    </article>
+                </div>
+                <div>
+                    <p>Soy un asesor digital, un profesional dedicado y un apasionado por brindar soluciones que te den
+                        tranquilidad. Contáctame para comenzar un viaje seguro y confiable.</p>
+                </div>
             </div>
-            <div>
-                <p>Soy un asesor digital, un profesional dedicado y un apasionado por brindar soluciones que te den
-                    tranquilidad. Contáctame para comenzar un viaje seguro y confiable.</p>
-            </div>
-        </div>
+        </section>
     </main>
     </main>
     <hr>
