--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -10,12 +10,10 @@
 
 <body>
     <header>
-        <div>
-            <a href="../index.html">
-                <div class="logo">
-                    <img src="../media/images/logo.png" alt="Logo" id="logo">
-                    <h1>Patricio Gallo</h1>
-                </div>
+        <div class="logo">
+            <a href="../index.html" aria-label="Home">
+                <img src="../media/images/logo.png" alt="Logo" id="logo" />
+                <h1>Patricio Gallo</h1>
             </a>
         </div>
         <nav>
@@ -37,8 +35,8 @@
                     alt="Ir a Whatsapp" class="boton-wsp"></a>
         </div>
 
-        <section class="portada-formulario">
-            <div class="form-auto">
+        <section class="portada">
+            <div class="formularios">
                 <h4>Contáctanos</h4>
                 <h5>Completá tu información...</h5>
                 <form action="/procesar-formulario" method="post" class="form-contacto">
