--- a/pages/cotizador.html
+++ b/pages/cotizador.html
@@ -9,12 +9,10 @@
 
   <body>
     <header>
-      <div>
-        <a href="../index.html">
-          <div class="logo">
+      <div class="logo">
+        <a href="../index.html" aria-label="Home">
             <img src="../media/images/logo.png" alt="Logo" id="logo" />
             <h1>Patricio Gallo</h1>
-          </div>
         </a>
       </div>
       <nav>
@@ -30,7 +28,7 @@
     </header>
     <hr>
     <main>
-      <section class="cotizador">
+      <section class="portada ">
         <h2>¿Qué querés asegurar?</h2>
         <div class="elementos-cotizables">
           <div class="auto-span2">
