--- a/pages/segemp.html
+++ b/pages/segemp.html
@@ -10,12 +10,10 @@
 
 <body>
     <header>
-        <div>
-            <a href="../index.html">
-                <div class="logo">
-                    <img src="../media/images/logo.png" alt="Logo" id="logo">
-                    <h1>Patricio Gallo</h1>
-                </div>
+        <div class="logo">
+            <a href="../index.html" aria-label="Home">
+                <img src="../media/images/logo.png" alt="Logo" id="logo" />
+                <h1>Patricio Gallo</h1>
             </a>
         </div>
         <nav>
@@ -28,12 +26,12 @@
             </ul>
         </nav>
         <div class="menu-icon">&#9776;</div>
-      </header>
+    </header>
     <hr>
     <main>
         <div>
-            <a href="https://wa.me/5493815906102" target="_blank"><img src="../media/images/whatsapp.png" alt="Ir a Whatsapp"
-                    class="boton-wsp"></a>
+            <a href="https://wa.me/5493815906102" target="_blank"><img src="../media/images/whatsapp.png"
+                    alt="Ir a Whatsapp" class="boton-wsp"></a>
         </div>
     </main>
     <hr>
@@ -56,7 +54,7 @@
         <hr />
         <section class="foot-3">
             <div class="copirig">
-                <img src="../media/images/logo-footer.png" alt="Logo" id="logo"/>
+                <img src="../media/images/logo-footer.png" alt="Logo" id="logo" />
                 <span>Copyright © 2023 Patricio Gallo</span>
             </div>
             <span>Powered by PG</span>
