--- a/pages/segper.html
+++ b/pages/segper.html
@@ -10,12 +10,10 @@
 
 <body>
     <header>
-        <div>
-            <a href="../index.html">
-                <div class="logo">
-                    <img src="../media/images/logo.png" alt="Logo" id="logo">
-                    <h1>Patricio Gallo</h1>
-                </div>
+        <div class="logo">
+            <a href="../index.html" aria-label="Home">
+                <img src="../media/images/logo.png" alt="Logo" id="logo" />
+                <h1>Patricio Gallo</h1>
             </a>
         </div>
         <nav>
@@ -56,11 +54,12 @@
         <hr />
         <section class="foot-3">
             <div class="copirig">
-                <img src="../media/images/logo-footer.png" alt="Logo" id="logo"/>
+                <img src="../media/images/logo-footer.png" alt="Logo" id="logo" />
                 <span>Copyright © 2023 Patricio Gallo</span>
             </div>
             <span>Powered by PG</span>
         </section>
     </footer>
 </body>
+
 </html>
