Se corrigen enlaces header nav y se agregan imagenes al cotizador

--- a/pages/autogestion.html
+++ b/pages/autogestion.html
@@ -19,10 +19,10 @@
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="../pages/about.html">Acerca de mí</a></li>
-                <li><a href="../pages/cotizador.html"></a>Cotizar</li>
-                <li><a href="../pages/segper.html">Seguros personas</a></li>
-                <li><a href="../pages/segemp.html">Seguros empresas</a></li>
+                <li><a href="./about.html">Acerca de mí</a></li>
+                <li><a href="./cotizador.html"></a>Cotizar</li>
+                <li><a href="./segper.html">Seguros personas</a></li>
+                <li><a href="../segemp.html">Seguros empresas</a></li>
             </ul>
         </nav>
         <div class="menu-icon">&#9776;</div>
