--- a/pages/cotizador.html
+++ b/pages/cotizador.html
@@ -33,29 +33,34 @@
         <div class="elementos-cotizables">
           <div class="auto-span2">
             <a href="./cotizadores/vehic.html">
+              <img src="../media/images/auto.png" alt="Cotizar seguro de vehículo particular">
               <h5>Vehículo particular</h5>
             </a>
           </div>
           <div>
             <a href="./cotizadores/vida.html">
+              <img src="../media/images/vida.png" alt="Cotizar seguro de vida y ahorro">
               <h5>Seguros de vida y ahorro</h5>
             </a>
           </div>
 
           <div>
             <a href="./cotizadores/accpers.html">
+              <img src="../media/images/accidentes.png" alt="Cotizar seguro de accidentes personales">
               <h5>Accidentes personales</h5>
             </a>
           </div>
 
           <div>
             <a href="./cotizadores/rcprofesional.html">
+              <img src="../media/images/profesional.png" alt="Cotizar seguro de RC Profesional">
               <h5>Responsabilidad Civil Profesional</h5>
             </a>
           </div>
 
           <div>
             <a href="./cotizadores/hogar.html">
+              <img src="../media/images/hogar.png" alt="Cotizar seguro de hogar">
               <h5>Hogar</h5>
             </a>
           </div>
