--- a/pages/reunion.html
+++ b/pages/reunion.html
@@ -18,12 +18,12 @@
         </div>
         <nav>
             <ul>
-                <li><a href="./pages/about.html">Acerca de mí</a></li>
-                <li><a href="./pages/cotizador.html">Cotizar</a></li>
-                <li><a href="./pages/segper.html">Seguros personas</a></li>
-                <li><a href="./pages/segemp.html">Seguros empresas</a></li>
-                <li><a href="./pages/autogestion.html">Autogestión</a></li>
-                <li><a href="./pages/contacto.html">Contacto</a></li>
+                <li><a href="./about.html">Acerca de mí</a></li>
+                <li><a href="./cotizador.html">Cotizar</a></li>
+                <li><a href="./segper.html">Seguros personas</a></li>
+                <li><a href="./segemp.html">Seguros empresas</a></li>
+                <li><a href="./autogestion.html">Autogestión</a></li>
+                <li><a href="./contacto.html">Contacto</a></li>
             </ul>
         </nav>
         <div class="menu-icon">&#9776;</div>
