--- a/pages/segper.html
+++ b/pages/segper.html
@@ -19,10 +19,10 @@
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="../pages/about.html">Acerca de mí</a></li>
-                <li><a href="../pages/cotizador.html">Cotizar</a></li>
-                <li><a href="../pages/segemp.html">Seguros empresas</a></li>
-                <li><a href="../pages/autogestion.html">Autogestión</a></li>
+                <li><a href="./about.html">Acerca de mí</a></li>
+                <li><a href="./cotizador.html">Cotizar</a></li>
+                <li><a href="./segemp.html">Seguros empresas</a></li>
+                <li><a href="./autogestion.html">Autogestión</a></li>
             </ul>
         </nav>
         <div class="menu-icon">&#9776;</div>
